finished all html but images

--- a/index.html
+++ b/index.html
@@ -2,9 +2,53 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Broadway.inc</title>
+    <title>Broadway Design</title>
   </head>
   <body>
+    <div class="heading">
+      <h1>Broadway Design</h1>
 
+    </div>
+    <div class="navigation">
+      <a href=""><p>Home</p></a>
+      <a href=""><p>Process</p></a>
+      <a href=""><p>Work</p></a>
+      <a href=""><p>Team</p></a>
+      <a href=""><p>Contact</p></a>
+
+    </div>
+    <div class="description">
+      <h2>Our Process</h2>
+      <div class="identify">
+        <img src="" alt="squigly line">
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+      </div>
+      <div class="understand">
+        <img src="" alt="2 arrows forming a circle">
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+      </div>
+      <div class="execute">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+      </div>
+    </div>
+    <div class="heading2">
+      <h3>Designed in New York</h3>
+    </div>
+    <div class="info">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+    <div class="wrapup">
+      <p>&copy;Broadway 2017</p>
+    </div>
   </body>
 </html>
