--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link href="D:/Broadway/resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="heading">
-      <h1>Broadway Design</h1>
+    <div class="header">
+      <div class="heading">
+        <h1>Broadway Design</h1>
 
-    </div>
-    <div class="navigation">
-      <a href=""><p>Home</p></a>
-      <a href=""><p>Process</p></a>
-      <a href=""><p>Work</p></a>
-      <a href=""><p>Team</p></a>
-      <a href=""><p>Contact</p></a>
+      </div>
+      <div class="navigation">
+        <a href=""><p>Home</p></a>
+        <a href=""><p>Process</p></a>
+        <a href=""><p>Work</p></a>
+        <a href=""><p>Team</p></a>
+        <a href=""><p>Contact</p></a>
 
+      </div>
     </div>
     <div class="description">
       <h2>Our Process</h2>
@@ -49,6 +52,11 @@
     </div>
     <div class="wrapup">
       <p>&copy;Broadway 2017</p>
+      <a href=""><p>Home</p></a>
+      <a href=""><p>About</p></a>
+      <a href=""><p>Work</p></a>
+      <a href=""><p>Team</p></a>
+      <a href=""><p>Contact</p></a>
     </div>
   </body>
 </html>
