--- a/index.html
+++ b/index.html
@@ -51,12 +51,17 @@
       <p>Twitter: @test</p>
     </div>
     <div class="wrapup">
-      <p>&copy;Broadway 2017</p>
-      <a href=""><p>Home</p></a>
-      <a href=""><p>About</p></a>
-      <a href=""><p>Work</p></a>
-      <a href=""><p>Team</p></a>
-      <a href=""><p>Contact</p></a>
+      <p>
+      <span>
+        &copy;Broadway 2017
+      </span>
+
+      <a href=""><span>Home</span></a>
+      <a href=""><span>About</span></a>
+      <a href=""><span>Work</span></a>
+      <a href=""><span>Team</span></a>
+      <a href=""><span>Contact</span></a>
+      </p>
     </div>
   </body>
 </html>
